--- a/microservice-service/pom.xml
+++ b/microservice-service/pom.xml
@@ -10,10 +10,10 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.startup.cn</groupId>
-	<artifactId>financialAPI</artifactId>
+	<artifactId>microservice-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>financialAPI</name>
-	<description>Demo project for Spring Boot</description>
+	<name>microservice-service</name>
+	<description>microservice-service</description>
 	<properties>
 		<java.version>15</java.version>
 	</properties>
