--- a/microservice-security/src/main/resources/application.properties
+++ b/microservice-security/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 # MySQL
-spring.datasource.url=jdbc:mysql://localhost/coinpidb?useUnicode=TRUE&useJDBCCompliantTimezoneShift=TRUE&useLegacyDatetimeCode=FALSE&serverTimezone=UTC&autoReconnect=TRUE
+spring.datasource.url=jdbc:mysql://localhost/cc_db?useUnicode=TRUE&useJDBCCompliantTimezoneShift=TRUE&useLegacyDatetimeCode=FALSE&serverTimezone=UTC&autoReconnect=TRUE
 spring.datasource.username=dev
-spring.datasource.password=PhG2rhhWdYhwx8X7
+spring.datasource.password=OTGYBXMOHC
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
