--- a/microservice-management/pom.xml
+++ b/microservice-management/pom.xml
@@ -16,12 +16,20 @@
 	<description>microservice-management</description>
 	<properties>
 		<java.version>15</java.version>
+		<spring-cloud-gcp.version>2.0.0</spring-cloud-gcp.version>
+		<spring-cloud.version>2020.0.2</spring-cloud.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
@@ -106,6 +114,7 @@
 		</dependency>
 
 	</dependencies>
+
 
 	<build>
 		<plugins>
