--- a/microservice-service/src/main/resources/application.properties
+++ b/microservice-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 # MySQL
-spring.datasource.url=jdbc:mysql://localhost/cc_db?useUnicode=TRUE&useJDBCCompliantTimezoneShift=TRUE&useLegacyDatetimeCode=FALSE&serverTimezone=UTC&autoReconnect=TRUE
+spring.datasource.url=jdbc:mysql://34.65.186.168:3306/servicedb?useUnicode=TRUE&useJDBCCompliantTimezoneShift=TRUE&useLegacyDatetimeCode=FALSE&serverTimezone=UTC&autoReconnect=TRUE
 spring.datasource.username=dev
 spring.datasource.password=OTGYBXMOHC
 
