--- a/k8s-confs/management-service.yaml
+++ b/k8s-confs/management-service.yaml
@@ -1,47 +1,20 @@
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: mongo-pvc
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 256Mi
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: mongo
-spec:
-  selector:
-    app: mongo
-  ports:
-    - port: 3306
-      targetPort: 3306
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mongo
+  name: management-api
 spec:
+  replicas: 1
   selector:
     matchLabels:
-      app: mongo
+      app: financial-api-microservice
   template:
     metadata:
       labels:
-        app: mongo
+        app: financial-api-microservice
     spec:
       containers:
-        - name: mongo
-          image: mongo
+        - name: app
+          image: menoita99/management_api:latest
           ports:
-            - containerPort: 3306
-          volumeMounts:
-            - name: storage
-              mountPath: /data/db
-      volumes:
-        - name: storage
-          persistentVolumeClaim:
-            claimName: mongo-pvc
+            - containerPort: 8080
+          imagePullPolicy: Always
