--- a/k8s-confs/service-service.yaml
+++ b/k8s-confs/service-service.yaml
@@ -1,23 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: management-micro
+  name: service-api
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: knote
+      app: financial-api-microservice
   template:
     metadata:
       labels:
-        app: knote
+        app: financial-api-microservice
     spec:
       containers:
         - name: app
-          image: learnk8s/knote-java:1.0.0
+          image: menoita99/service_api:latest
           ports:
             - containerPort: 8080
-          env:
-            - name: MONGO_URL
-              value: mongodb://mongo:27017/dev
           imagePullPolicy: Always
