--- a/microservice-service/src/main/resources/application.properties
+++ b/microservice-service/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 # MySQL
-spring.datasource.url=jdbc:mysql://localhost/cc_db?useUnicode=TRUE&useJDBCCompliantTimezoneShift=TRUE&useLegacyDatetimeCode=FALSE&serverTimezone=UTC&autoReconnect=TRUE
-spring.datasource.username=dev
-spring.datasource.password=OTGYBXMOHC
+spring.datasource.url=jdbc:mysql://172.17.0.2:53000/service_db?useUnicode=TRUE&useJDBCCompliantTimezoneShift=TRUE&useLegacyDatetimeCode=FALSE&serverTimezone=UTC&autoReconnect=TRUE
+spring.datasource.username=root
+spring.datasource.password=service
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
