--- a/k8s-confs/secrets/service-db-secret.yaml
+++ b/k8s-confs/secrets/service-db-secret.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mongodb
+  name: managementmysqldb
 type: Opaque
 data:
-  database-password: MTIzNDU2
-  database-user: cGlvdHI=
+  database-password: dev
+  database-user: PhG2rhhWdYhwx8X7
