--- a/k8s-confs/secrets/management-db-secret.yaml
+++ b/k8s-confs/secrets/management-db-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: servicemysqldb
+  name: managementmysqldb
 type: Opaque
 data:
   database-password: dev
