--- a/microservice-management/Dockerfile
+++ b/microservice-management/Dockerfile
@@ -1,6 +1,7 @@
 FROM openjdk:17-ea-10-jdk-alpine3.13
-WORKDIR /opt
-ENV PORT 8080
+ENV APP_HOME /opt
 EXPOSE 8080
-COPY target/*.jar /opt/app.jar
-ENTRYPOINT exec java $JAVA_OPTS -jar app.jar
+COPY target/*.jar $APP_HOME/app.jar
+WORKDIR $APP_HOME
+ENTRYPOINT ["sh", "-c"]
+CMD ["exec java -jar app.jar"]
