--- a/microservice-management/src/main/resources/application.properties
+++ b/microservice-management/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=management
+spring.application.name=management-service
 # MySQL
 spring.datasource.url=jdbc:mysql://34.65.186.168:3306/managementdb?createDatabaseIfNotExist=true&useUnicode=TRUE&useJDBCCompliantTimezoneShift=TRUE&useLegacyDatetimeCode=FALSE&serverTimezone=UTC&autoReconnect=TRUE
 spring.datasource.username=dev
