--- a/microservice-security/src/main/resources/application.properties
+++ b/microservice-security/src/main/resources/application.properties
@@ -1,2 +1,3 @@
+spring.application.name=security-service
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 spring.cloud.kubernetes.discovery.all-namespaces=true
