--- a/microservice-service/src/main/resources/application.properties
+++ b/microservice-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+spring.application.name=service-service
 # MySQL
 spring.datasource.url=jdbc:mysql://34.65.186.168:3306/servicedb?createDatabaseIfNotExist=true&useUnicode=TRUE&useJDBCCompliantTimezoneShift=TRUE&useLegacyDatetimeCode=FALSE&serverTimezone=UTC&autoReconnect=TRUE
 spring.datasource.username=dev
