--- a/microservice-management/src/main/resources/application.properties
+++ b/microservice-management/src/main/resources/application.properties
@@ -1,4 +1,10 @@
 spring.application.name=management-service
+spring.cloud.loadbalancer.ribbon.enabled=false
+spring.cloud.kubernetes.discovery.all-namespaces=true
+spring.management.endpoints.web.exposure.include="*"
+spring.management.endpoint.health.show-details="*"
+
+
 # MySQL
 spring.datasource.url=jdbc:mysql://34.65.186.168:3306/managementdb?createDatabaseIfNotExist=true&useUnicode=TRUE&useJDBCCompliantTimezoneShift=TRUE&useLegacyDatetimeCode=FALSE&serverTimezone=UTC&autoReconnect=TRUE
 spring.datasource.username=dev
