--- a/k8s-confs/ingress.yaml
+++ b/k8s-confs/ingress.yaml
@@ -9,7 +9,7 @@ spec:
     serviceName: default-http-backend
     servicePort: 80
   rules:
-  - host: localhost
+  - host: kubernetes.docker.internal
     http:
       paths:
       - path: /management-service
