--- a/microservice-service/src/main/resources/application.properties
+++ b/microservice-service/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=service-service
 # MySQL
-spring.datasource.url=jdbc:mysql://34.65.186.168:3306/servicedb?createDatabaseIfNotExist=true&useUnicode=TRUE&useJDBCCompliantTimezoneShift=TRUE&useLegacyDatetimeCode=FALSE&serverTimezone=UTC&autoReconnect=TRUE
+#spring.datasource.url=jdbc:mysql://34.65.186.168:3306/servicedb?createDatabaseIfNotExist=true&useUnicode=TRUE&useJDBCCompliantTimezoneShift=TRUE&useLegacyDatetimeCode=FALSE&serverTimezone=UTC&autoReconnect=TRUE
+spring.datasource.url=jdbc:mysql://34.65.186.168:3306/managementdb?createDatabaseIfNotExist=true&useUnicode=TRUE&useJDBCCompliantTimezoneShift=TRUE&useLegacyDatetimeCode=FALSE&serverTimezone=UTC&autoReconnect=TRUE
 spring.datasource.username=dev
 spring.datasource.password=PhG2rhhWdYhwx8X7
 
@@ -20,3 +21,4 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 
 
 spring.cloud.kubernetes.discovery.all-namespaces=true
+server.port=8081
