--- a/microservice-security/src/main/resources/application.properties
+++ b/microservice-security/src/main/resources/application.properties
@@ -1,3 +1,27 @@
-spring.application.name=security-service
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
+spring.application.name=management-service
+spring.cloud.loadbalancer.ribbon.enabled=false
 spring.cloud.kubernetes.discovery.all-namespaces=true
+spring.cloud.kubernetes.discovery.all-namespaces=true
+spring.management.endpoints.web.exposure.include="*"
+spring.management.endpoint.health.show-details="*"
+
+# MySQL
+spring.datasource.url=jdbc:mysql://34.65.186.168:3306/managementdb?createDatabaseIfNotExist=true&useUnicode=TRUE&useJDBCCompliantTimezoneShift=TRUE&useLegacyDatetimeCode=FALSE&serverTimezone=UTC&autoReconnect=TRUE
+spring.datasource.username=dev
+spring.datasource.password=PhG2rhhWdYhwx8X7
+
+#SQL.
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=update
+
+# logging
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
+#logging.level.org.hibernate.SQL=debug
+
+server.shutdown=graceful
+server.port=8082
