--- a/microservice-security/src/main/resources/application.properties
+++ b/microservice-security/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=management-service
+spring.application.name=security-service
 spring.cloud.loadbalancer.ribbon.enabled=false
 spring.cloud.kubernetes.discovery.all-namespaces=true
 spring.cloud.kubernetes.discovery.all-namespaces=true
