--- a/k8s-confs/ingress.yaml
+++ b/k8s-confs/ingress.yaml
@@ -1,21 +1,25 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: financial-ingress
+  name: gateway-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
+  backend:
+    serviceName: default-http-backend
+    servicePort: 8000
   rules:
-  - http:
+    http:
       paths:
-      - path: /management/*
+      - path: /management
         backend:
           serviceName: management-service
           servicePort: 8080
-      - path: /service/*
+      - path: /service
         backend:
           serviceName: service-service
           servicePort: 8081
-#      - path: /security-service/*
-      - path: /security/*
+      - path: /security
         backend:
           serviceName: security-service
           servicePort: 8082
