--- a/microservice-management/src/main/resources/application.properties
+++ b/microservice-management/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.cloud.kubernetes.discovery.all-namespaces=true
 spring.management.endpoints.web.exposure.include="*"
 spring.management.endpoint.health.show-details="*"
 
-
+#spring.cloud.loadbalancer.ribbon.enable: false
 # MySQL
 spring.datasource.url=jdbc:mysql://34.65.103.186:3306/managementdb?createDatabaseIfNotExist=true&useUnicode=TRUE&useJDBCCompliantTimezoneShift=TRUE&useLegacyDatetimeCode=FALSE&serverTimezone=UTC&autoReconnect=TRUE
 spring.datasource.username=dev
