--- a/microservice-management/src/main/resources/application.properties
+++ b/microservice-management/src/main/resources/application.properties
@@ -27,3 +27,4 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 server.shutdown=graceful
 
 spring.cloud.kubernetes.discovery.all-namespaces=true
+server.port=8080
