--- a/microservice-security/pom.xml
+++ b/microservice-security/pom.xml
@@ -163,6 +163,11 @@
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			</dependency>
+
 	</dependencies>
 
 
