--- a/microservice-service/src/main/resources/application.properties
+++ b/microservice-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=service-service
 # MySQL
-#spring.datasource.url=jdbc:mysql://34.65.103.186:3306/servicedb?createDatabaseIfNotExist=true&useUnicode=TRUE&useJDBCCompliantTimezoneShift=TRUE&useLegacyDatetimeCode=FALSE&serverTimezone=UTC&autoReconnect=TRUE
-spring.datasource.url=jdbc:mysql://34.65.103.186:3306/managementdb?createDatabaseIfNotExist=true&useUnicode=TRUE&useJDBCCompliantTimezoneShift=TRUE&useLegacyDatetimeCode=FALSE&serverTimezone=UTC&autoReconnect=TRUE
+spring.datasource.url=jdbc:mysql://34.65.103.186:3306/servicedb?createDatabaseIfNotExist=true&useUnicode=TRUE&useJDBCCompliantTimezoneShift=TRUE&useLegacyDatetimeCode=FALSE&serverTimezone=UTC&autoReconnect=TRUE
+#spring.datasource.url=jdbc:mysql://34.65.103.186:3306/managementdb?createDatabaseIfNotExist=true&useUnicode=TRUE&useJDBCCompliantTimezoneShift=TRUE&useLegacyDatetimeCode=FALSE&serverTimezone=UTC&autoReconnect=TRUE
 spring.datasource.username=dev
 spring.datasource.password=PhG2rhhWdYhwx8X7
 
