--- a/microservice-service/src/main/resources/application.properties
+++ b/microservice-service/src/main/resources/application.properties
@@ -22,3 +22,5 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 
 spring.cloud.kubernetes.discovery.all-namespaces=true
 server.port=8081
+python.port=5000
+python.ip=127.0.0.1
