--- a/microservice-service/dataScience/Dockerfile
+++ b/microservice-service/dataScience/Dockerfile
@@ -2,13 +2,17 @@
 FROM ubuntu:18.04
 LABEL maintainer="Your Name <francisco>"
 RUN apt-get update -y && \
-    apt-get install -y python-pip python-dev
+    apt-get install -y python3.8 && \
+    apt-get install -y python3-pip python3-dev
+
 # We copy just the requirements.txt first to leverage Docker cache
 COPY ./requirements.txt /app/requirements.txt
 WORKDIR /app
 
-RUN pip install -r requirements.txt
+RUN pip3 install -r requirements.txt
 
 COPY . /app
 
-CMD [ "python", "./main.py" ]
+EXPOSE 5000
+
+CMD ["python3","./main.py" ]
