--- a/microservice-service/dataScience/requirements.txt
+++ b/microservice-service/dataScience/requirements.txt
@@ -10,9 +10,9 @@ Jinja2==2.11.3
 joblib==1.0.1
 kiwisolver==1.3.1
 MarkupSafe==1.1.1
-matplotlib==3.4.2
-numpy==1.20.2
-pandas==1.2.4
+matplotlib==3.3.4 #3.4.2
+numpy==1.19.5
+pandas==1.1.5
 patsy==0.5.1
 Pillow==8.2.0
 plotly==4.14.3
@@ -23,7 +23,7 @@ pytz==2021.1
 requests==2.25.1
 retrying==1.3.3
 scikit-learn==0.24.2
-scipy==1.6.3
+scipy==1.5.4
 six==1.16.0
 statsmodels==0.12.2
 threadpoolctl==2.1.0
