--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
 - name: maven:3.6.0-jdk-11-slim
-  args: ['microservice-managament/mvnw', 'package']
+  args: ['https://github.com/Menoita99/financialAPI/tree/main/microservice-management/mvnw', 'package']
 - name: maven:3.6.0-jdk-11-slim
-  args: ['microservice-security/mvnw', 'package']
+  args: ['https://github.com/Menoita99/financialAPI/tree/main/microservice-security/mvnw', 'package']
 - name: maven:3.6.0-jdk-11-slim
-  args: ['microservice-service/mvnw', 'package']
+  args: ['https://github.com/Menoita99/financialAPI/tree/main/microservice-service/mvnw', 'package']
