--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
-- name: 'https://github.com/Menoita99/financialAPI/tree/main/microservice-management/mvnw'
+- name: 'github.com/Menoita99/financialAPI/tree/main/microservice-management/mvnw'
   args: ['package']
-- name: 'https://github.com/Menoita99/financialAPI/tree/main/microservice-security/mvnw'
+- name: 'github.com/Menoita99/financialAPI/tree/main/microservice-security/mvnw'
   args: ['package']
-- name: 'https://github.com/Menoita99/financialAPI/tree/main/microservice-service/mvnw'
+- name: 'github.com/Menoita99/financialAPI/tree/main/microservice-service/mvnw'
   args: ['package']
