--- a/microservice-management/cloudbuild.yaml
+++ b/microservice-management/cloudbuild.yaml
@@ -1,2 +1,4 @@
 steps:
-- args: ['./mvnw', 'package']
+- name: 'openjdk:17-ea-10-jdk-alpine3.13'
+  entrypoint: 'bash'
+  args: ['-c', './mvnw package']
