--- a/microservice-service/cloudbuild.yaml
+++ b/microservice-service/cloudbuild.yaml
@@ -1,4 +1,5 @@
 steps:
-- name: adoptopenjdk/openjdk:17-ea-10-jdk-alpine3.13
+- name: openjdk:10-jdk
+  dir: microservice-service
   entrypoint: bash
   args: ['-c', './mvnw package']
