--- a/microservice-management/cloudbuild.yaml
+++ b/microservice-management/cloudbuild.yaml
@@ -1,4 +1,5 @@
 steps:
-- name: openjdk:10-jdk
+- name: openjdk:17-jdk
+  dir: microservice-management
   entrypoint: bash
   args: ['-c', './mvnw package']
